# hack-media-wise

./: LICENSE  README.md
media/: pyproject.toml  start.py
media/media_wise/: calculation.py  conver_utils.py  custom_setup.py  download.py  form.py  hexagon.py  main.py  map_.py  model.py  stati.py  utils.py
media/raw_data/: df_res_eval_ao.csv  moscow_ao.geojson  moscow_districts.geojson  moscow_districts_hex.geojson
source_data/: baseline.ipynb  readme.md
