[tool.poetry]
name = "media-wise"
version = "0.1.0"
description = ""
authors = ["Ikanam_starichki <ikanam_lab@mail.ru>"]
readme = "README.md"

[tool.poetry.scripts]
start = "start:main"


[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
folium = "^0.17.0"
streamlit-folium = "^0.21.0"
streamlit-javascript = "^0.1.5"
geopandas = "^1.0.1"
h3 = "^3.7.7"
shapely = "^2.0.4"
catboost = "^1.2.5"
scikit-learn = "^1.5.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
